--- a/assets/css/steller.css
+++ b/assets/css/steller.css
@@ -6345,23 +6345,26 @@ a.close.disabled {
 /* Modal Content */
 .modal-content {
 	position: relative;
-	/* display: -webkit-box; */
-	/* display: -webkit-flex; */
-	/* display: -ms-flexbox; */
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
 	-webkit-flex-direction: column;
 	-ms-flex-direction: column;
 	flex-direction: column;
-	width: 570px;
+	width: 600px;
 	pointer-events: auto;
 	background-color: #fff;
 	background-clip: padding-box;
 	border: 1px solid rgba(0, 0, 0, 0.2);
 	border-radius: 0.3rem;
 	outline: 0;
-	height: auto;
+	top: 22%;
+	bottom: 0;
+	margin: auto;
+	padding: 20px 30px;
 }
 /* The Close Button */
 .close {
