--- a/assets/css/steller.css
+++ b/assets/css/steller.css
@@ -6453,7 +6453,7 @@ a.close.disabled {
   content: none;
 }
 
-.modal-content {
+/* .modal-content {
   position: relative;
   display: -webkit-box;
   display: -webkit-flex;
@@ -6471,7 +6471,7 @@ a.close.disabled {
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 0.3rem;
   outline: 0;
-}
+} */
 
 .modal-backdrop {
   position: fixed;
