--- a/assets/css/steller.css
+++ b/assets/css/steller.css
@@ -11577,6 +11577,19 @@ pre {
   margin-right: -2rem;
 }
 
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  top: 0;
+  left: 0;
+}
+.header {
+  position: relative;
+  overflow: hidden;
+}
+
 @media (max-width: 991.98px) {
   .header .container {
     -webkit-box-pack: center;
