--- a/assets/css/steller.css
+++ b/assets/css/steller.css
@@ -11578,12 +11578,13 @@ pre {
 }
 
 #particles-js {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  top: 0;
-  left: 0;
+	position: absolute;
+	width: 100%;
+	height: 35%;
+	z-index: 999;
+	bottom: 0;
+	right: 0;
+	max-width: 50%;
 }
 .header {
   position: relative;
